updated responsive styling and completed demo mode implementation

--- a/src/index.css
+++ b/src/index.css
@@ -166,6 +166,10 @@ button.delete{
   color: #337ab7;
 }
 
+.contact p {
+  margin: 3px auto;
+}
+
 .logoutButtonContainer {
   text-align: center;
 }
