--- a/src/index.css
+++ b/src/index.css
@@ -172,12 +172,11 @@ button.delete{
 
 .logoutButtonContainer {
   text-align: center;
+  margin: 12px;
 }
 
 .logout {
-    margin: 10px auto;
-    border: 1px solid grey;
-    border-radius: 3px;
+    width: 300px;
 }
 
 h1 {
